--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <header class="head-container">
-            <div class="logo">DARSHAN</div>
+            <div class="head-name">DARSHAN</div>
+            <div>
+                <ul class="links">
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">ABOUT</a></li>
+                    <li><a href="">PROJECTS</a></li>
+                    <li><a href="">CONTACT</a></li>
+                </ul>
+            </div>
         </header>
         <script src="" async defer></script>
     </body>
