--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Darshan's Portfolio</title>
-    <link rel="stylesheet" href="style.css" > 
-</head>
-<body>
-    <nav class="navbar">
-        <div id="name">
-            <h1>DARSHAN K</h1>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div>
+          <h1>Darshan</h1>
         </div>
-        <div class="navigation-list">
-            <li>About</li>
-            <li>Projects</li>
-            <li>Skills</li>
-            <li>Contact</li>
+        <div>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
         </div>
-    </nav>
-    <section>
-        
-    </section>
-</body>
+      </nav>
+    </header>
+    <footer>
+      <p>Copyright Darshan K</p>
+    </footer>
+  </body>
 </html>
