--- a/index.html
+++ b/index.html
@@ -5,29 +5,193 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Darshan's Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="technologies.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script></script>
   </head>
   <body>
     <header>
       <nav>
-        <div>
-          <h1>Darshan</h1>
+        <div class="logo">
+          <i class="fa-solid fa-bars"></i>
+          <h1>DARSHAN</h1>
         </div>
         <div>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+          <ul class="mobileNavLinks">
+            <li><a id="home" class="navigation-list" href="#home">HOME</a></li>
+            <li><a id="TechStack" class="navigation-list" href="#technologies">TechStack</a></li>
+            <li><a id="Projects"class="navigation-list" href="#projects">PROJECTS</a></li>
+            <li><a id="contact" class="navigation-list" href="#contact">CONTACT</a></li>
           </ul>
+          <ul class="navlinks">
+            <li><a id="home" class="navigation-list" href="#home">HOME</a></li>
+            <li><a id="TechStack" class="navigation-list" href="#technologies">TechStack</a></li>
+            <li><a id="Projects"class="navigation-list" href="#projects">PROJECTS</a></li>
+            <li><a id="contact" class="navigation-list" href="#contact">CONTACT</a></li>
+          </ul>
+          
         </div>
       </nav>
     </header>
+    <section>
+      <section id="home" class="about-container">
+        <div class="about">
+          <div class="left">
+            <div>
+              <h1 style="margin: 0; font-size: 45px; align-items: center">
+                Hi It's,
+                <span class="typing" style="color: var(--contrast-font-color)"
+                  >DARSHAN
+                </span>
+              </h1>
+            </div>
+            <div>
+              <h3 style="margin: 00; font-size: 30px; align-items: center">
+                I'm a
+                <span
+                  class="typing-role"
+                  style="color: var(--contrast-font-color)"
+                ></span>
+              </h3>
+            </div>
+          </div>
+          <div class="right">
+            <div>
+              <p style="margin: 0;letter-spacing: 0.5;line-height: 1.6;">
+                I’m a passionate developer with a strong foundation in both
+                frontend and backend technologies. I’m proficient in Angular,
+                Node.js, MongoDB. Constantly eager to learn and grow, I enjoy
+                building efficient, scalable applications and exploring new
+                technologies.
+              </p>
+            </div>
+            <div class="icons">
+              <a href="https://github.com/darshan744" target="_blank"
+                ><i class="icon fa-brands fa-github"> </i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/darshan-k-810972277/"
+                target="_blank"
+              >
+                <i class="icon fa-brands fa-linkedin"></i>
+              </a>
+              <a href="">
+                <i class="icon fa-solid fa-download"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <section id="technologies"></section>
+          <h1 style="color: var(--contrast-font-color); font-size: 25px;">Technologies I Know</h1>
+          <div class="tech-list">
+            <div class="tech-item">
+              <i class="fab fa-html5" style="color: #e34c26; font-size: 40px;"></i>
+              <p>HTML5</p>
+            </div>
+            <div class="tech-item">
+              <i class="fab fa-css3-alt" style="color: #1572b6; font-size: 40px;"></i>
+              <p>CSS3</p>
+            </div>
+            <div class="tech-item">
+              <i class="fab fa-js-square" style="color: #f7df1e; font-size: 40px;"></i>
+              <p>JavaScript</p>
+            </div>
+            <div class="tech-item">
+              <i class="fab fa-angular" style="color: #dd1b16; font-size: 40px;"></i>
+              <p>Angular</p>
+            </div>
+            <div class="tech-item">
+              <i class="fab fa-node-js" style="color: #68a063; font-size: 40px;"></i>
+              <p>Node.js</p>
+            </div>
+            <div class="tech-item">
+              <i class="fas fa-database" style="color: #4db33d; font-size: 40px;"></i>
+              <p>MongoDB</p>
+            </div>
+            <div class="tech-item">
+              <i class="fab fa-java" style="color: #4db33d; font-size: 40px;"></i>
+              <p>Java</p>
+            </div>
+          </div>
+        </section>
+      </section>
+      <section id="projects">
+        <h1 style="color: var(--contrast-font-color);font-size: 25px;">Projects</h1>
+        <div class="project">
+          <h3>
+            <li>
+            SlotBooking Portal
+          </li>
+        </h3>
+          <div class="project-details">
+            <div class="tech-stack">
+              <h4 style="margin: 0;">TechStack</h4>
+              <ul>
+              <li><i class="fab fa-angular"></i>Angular</li>
+              <li><i class="fas fa-database"></i> MongoDB</li>
+              <li><i class="fas fa-server"></i>ExpressJS</li>
+              <li><i class="fab fa-node-js"></i> NodeJS</li></ul>
+            </div>
+            <div class="description">
+              <p>Designed and developed a user-friendly To-Do application to help users organize tasks, set priorities, and manage deadlines efficiently. The app features an intuitive interface for creating, editing, and deleting tasks, with options to categorize tasks, set due dates, and add reminders. It supports task prioritization, progress tracking, and customizable views (like daily, weekly, or categorized lists). With seamless navigation and responsive design, the application enhances productivity by enabling users to stay organized and focused on their goals.
+</p>
+              <a href="https://github.com/darshan744/"></a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <h3>
+            <li>
+            MangaReaderApp
+          </li>
+        </h3>
+          <div class="project-details">
+            <div class="tech-stack">
+              <h4 style="margin: 0;">TechStack</h4>
+              <ul>
+              <li><i class="fab fa-html5"></i> HTML</li>
+              <li><i class="fab fa-css3-alt"></i> CSS</li>
+              <li><i class="fab fa-js-square"></i> JavaScript</li>
+            </ul>
+            </div>
+            <div class="description">
+              <p>Designed and developed a comprehensive portal for the training department to streamline
+                 the management and organization of training events. The system provides an intuitive interface for students to view available training sessions and book slots, empowering them to enhance their skills through structured learning opportunities. It dynamically aligns slot availability with instructor schedules, ensuring that training sessions are efficiently coordinated with instructors' real-time availability. The portal also offers features to handle multiple venues, batch-wise slot management, 
+                and automated notifications, making the entire process seamless for both students and administrators.
+              </p>
+              <a href="https://github.com/darshan744/"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        
+      </section>
+  </section>  </section>
     <footer>
-      <p>Copyright Darshan K</p>
+      <p>&copy; 2025 Darshan K. All rights reserved.</p>
+      <div class="social-icons">
+        <a href="https://github.com/darshan744" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/darshan-k-810972277/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
     </footer>
   </body>
+  <script src="index.js"></script>
 </html>
