changed a little with list styling

--- a/index.html
+++ b/index.html
@@ -4,25 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Darshan's Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="about.css" />
-    <link rel="stylesheet" href="projects.css">
-    <link rel="stylesheet" href="technologies.css">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/projects.css"/>
+    <link rel="stylesheet" href="css/technologies.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto"
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Roboto"
     />
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script></script>
   </head>
   <body>
     <header>
@@ -49,14 +39,14 @@
         </div>
       </nav>
     </header>
-    <section>
+    <section style="padding: 10px;">
       <section id="home" class="about-container">
         <div class="about">
           <div class="left">
             <div>
               <h1 style="margin: 0; font-size: 45px; align-items: center">
                 Hi It's,
-                <span class="typing" style="color: var(--contrast-font-color)"
+                <span style="color: var(--contrast-font-color)"
                   >DARSHAN
                 </span>
               </h1>
@@ -64,8 +54,7 @@
             <div>
               <h3 style="margin: 00; font-size: 30px; align-items: center">
                 I'm a
-                <span
-                  class="typing-role"
+                <span class="typing-role"
                   style="color: var(--contrast-font-color)"
                 ></span>
               </h3>
@@ -145,10 +134,10 @@
             <div class="tech-stack">
               <h4 style="margin: 0;">TechStack</h4>
               <ul>
-              <li><i class="fab fa-angular"></i>Angular</li>
-              <li><i class="fas fa-database"></i> MongoDB</li>
-              <li><i class="fas fa-server"></i>ExpressJS</li>
-              <li><i class="fab fa-node-js"></i> NodeJS</li></ul>
+              <li class="tech-stack-list"><i class="fab fa-angular"></i>Angular</li>
+              <li class="tech-stack-list"><i class="fas fa-database"></i> MongoDB</li>
+              <li class="tech-stack-list"><i class="fas fa-server"></i>ExpressJS</li>
+              <li class="tech-stack-list"><i class="fab fa-node-js"></i> NodeJS</li></ul>
             </div>
             <div class="description">
               <p>Designed and developed a user-friendly To-Do application to help users organize tasks, set priorities, and manage deadlines efficiently. The app features an intuitive interface for creating, editing, and deleting tasks, with options to categorize tasks, set due dates, and add reminders. It supports task prioritization, progress tracking, and customizable views (like daily, weekly, or categorized lists). With seamless navigation and responsive design, the application enhances productivity by enabling users to stay organized and focused on their goals.
