added resume link

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               >
                 <i class="icon fa-brands fa-linkedin"></i>
               </a>
-              <a href="">
+              <a href="https://drive.google.com/file/d/1VNQ-6DfBrgGQy4DGD_NDQ4uTk7uivFg7/view?usp=sharing" target="_blank">
                 <i class="icon fa-solid fa-download"></i>
               </a>
             </div>
