changed name font size

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <div class="about">
           <div class="left">
             <div>
-              <h1 style="margin: 0; font-size: 45px; align-items: center">
+              <h1 class="name">
                 Hi It's,
                 <span style="color: var(--contrast-font-color)">DARSHAN </span>
               </h1>
             </div>
             <div>
-              <h3 style="margin: 00; font-size: 30px; align-items: center">
+              <h3 class="role">
                 I'm a
                 <span
                   class="typing-role"
@@ -249,11 +249,11 @@
         </div>
       </div>
     </section>
-    <section id="contact">
+    <section id="contact-div">
       <h2 style="color: red">Contact Me</h2>
       <div class="contact-icons">
         <div class="contact-icon">
-          <a href="mailto:darshankumaravelk.com" target="_blank">
+          <a href="mailto:darshankumaravelk@gmail.com" target="_blank">
             <i class="fas fa-envelope"></i> Email
           </a>
         </div>
