changed the style for project section

--- a/index.html
+++ b/index.html
@@ -179,72 +179,76 @@
       <h1 style="color: var(--contrast-font-color); font-size: 25px">
         Projects
       </h1>
-      <div class="project">
-        <h3>
-          <li>SlotBooking Portal</li>
-        </h3>
-        <div class="project-details">
-          <div class="tech-stack">
-            <h4 style="margin: 0">TechStack</h4>
-            <ul>
-              <li class="tech-stack-list">
-                <i class="fab fa-angular"></i>Angular
-              </li>
-              <li class="tech-stack-list">
-                <i class="fas fa-database"></i> MongoDB
-              </li>
-              <li class="tech-stack-list">
-                <i class="fas fa-server"></i>ExpressJS
-              </li>
-              <li class="tech-stack-list">
-                <i class="fab fa-node-js"></i> NodeJS
-              </li>
-            </ul>
+      <div class="project-container">
+        <div class="project">
+          <div class="project-image">
+            <img src="assets/booking.jpg" alt="">
           </div>
-          <div class="description">
-            <p>
-              Designed and developed a user-friendly To-Do application to help
-              users organize tasks, set priorities, and manage deadlines
-              efficiently. The app features an intuitive interface for creating,
-              editing, and deleting tasks, with options to categorize tasks, set
-              due dates, and add reminders. It supports task prioritization,
-              progress tracking, and customizable views (like daily, weekly, or
-              categorized lists). With seamless navigation and responsive
-              design, the application enhances productivity by enabling users to
-              stay organized and focused on their goals.
-            </p>
-            <a href="https://github.com/darshan744/"></a>
+          <div class="project-name">
+            <h4>SLOTBOOKING PORTAL</h4>
+          </div>
+          <div class="project-details">
+            <div class="tech-stack">
+              <ul>
+                <li class="tech-stack-list">
+                  <i class="fab fa-angular"></i>Angular
+                </li>
+                <li class="tech-stack-list">
+                  <i class="fas fa-database"></i>MongoDB
+                </li>
+                <li class="tech-stack-list">
+                  <i class="fas fa-server"></i>ExpressJS
+                </li>
+                <li class="tech-stack-list">
+                  <i class="fab fa-node-js"></i> NodeJS
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="description">
+              <p>
+                Designed and developed a comprehensive portal for the training
+                department to streamline the management and organization of
+                training events.
+              </p>
+            </div>
+
+            <hr>
+            <div class="source-code">
+            <a href="">Frontend</a>
+            <a href="">Backend</a>
+          </div>
           </div>
         </div>
-      </div>
-      <div class="project">
-        <h3>
-          <li>MangaReaderApp</li>
-        </h3>
-        <div class="project-details">
-          <div class="tech-stack">
-            <h4 style="margin: 0">TechStack</h4>
-            <ul>
-              <li><i class="fab fa-html5"></i> HTML</li>
-              <li><i class="fab fa-css3-alt"></i> CSS</li>
-              <li><i class="fab fa-js-square"></i> JavaScript</li>
-            </ul>
+        <div class="project">
+          <div class="project-image">
+            <img src="assets/todo.png" alt="">
           </div>
-          <div class="description">
-            <p>
-              Designed and developed a comprehensive portal for the training
-              department to streamline the management and organization of
-              training events. The system provides an intuitive interface for
-              students to view available training sessions and book slots,
-              empowering them to enhance their skills through structured
-              learning opportunities. It dynamically aligns slot availability
-              with instructor schedules, ensuring that training sessions are
-              efficiently coordinated with instructors' real-time availability.
-              The portal also offers features to handle multiple venues,
-              batch-wise slot management, and automated notifications, making
-              the entire process seamless for both students and administrators.
-            </p>
-            <a href="https://github.com/darshan744/"></a>
+          <div class="project-name">
+            <h4>TODOAPP</h4>
+          </div>
+          <div class="project-details">
+            <div class="tech-stack">
+              <ul>
+                <li><i class="fab fa-html5"></i> HTML</li>
+                <li><i class="fab fa-css3-alt"></i> CSS</li>
+                <li><i class="fab fa-js-square"></i> JavaScript</li>
+              </ul>
+            </div>
+            <hr>
+            <div class="description">
+              <p>
+                Designed and developed a user-friendly To-Do application to help
+                users organize tasks, set priorities, and manage deadlines
+                efficiently. The app features an intuitive interface for creating,
+                editing, and deleting tasks
+              </p>
+              <a href="https://github.com/darshan744/"></a>
+            </div>
+          </div>
+          <hr>
+          <div class="source-code">
+            <a href="">Source code</a>
           </div>
         </div>
       </div>
